--- a/src/components/accVerifyModal/style.css
+++ b/src/components/accVerifyModal/style.css
@@ -123,7 +123,7 @@ html .sb-login-form-container .field-message-wrapper {
     position: relative;
    }
    .sb-account-btn.btn-primary{
-       background-color: crimson;
+       background-color: #04343c;
     }
     .sb-account-btn:disabled{
         background-color: #ccc;
