--- a/src/styles.css
+++ b/src/styles.css
@@ -9999,6 +9999,7 @@ html .sports-list-container .mobile{
   width: inherit;
   height: auto;
   align-self: center;
+  display: block;
 }
 
 .promotion .events-container .sport:not(:last-child) {
